--- a/newgoods1.html
+++ b/newgoods1.html
@@ -68,7 +68,7 @@
             <div class="absolute inset-0 bg-black/50"></div>
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-32 text-center relative z-10">
                 <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight">品味多元文化，支持在地創業</h1>
-                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">匯集苗栗新住民的匠心之作、專業服務與田園風光，探索她們在這片土地上綻放的精彩故事。</p>
+                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">匯集苗栗新住民的匠心之作、專業服務與田風光，探索她們在這片土地上綻放的精彩故事。</p>
             </div>
         </section>
 
@@ -96,6 +96,14 @@
                         <img src="https://images.unsplash.com/photo-1625944026282-111181163b26?q=80&w=800&auto=format&fit=crop" alt="秀珍月子餐" class="w-full h-48 object-cover">
                         <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">秀珍月子餐</h3><p class="mt-2 text-gray-600">傳統與營養結合，為產後媽媽提供最佳照護。</p></div>
                     </div>
+                    <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="xinzhumin-seafood">
+                        <img src="https://images.unsplash.com/photo-1615141982883-c46e37c25b55?q=80&w=800&auto=format&fit=crop" alt="新住民水產" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">新住民水產</h3><p class="mt-2 text-gray-600">急速冷凍，鎖住來自優質水域的頂級鮮味。</p></div>
+                    </div>
+                    <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="xinlanhai-blueberry">
+                        <img src="https://images.unsplash.com/photo-1498557850523-2633a1d3721d?q=80&w=800&auto=format&fit=crop" alt="新藍海藍莓" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">新藍海藍莓</h3><p class="mt-2 text-gray-600">飽滿多汁，營養美味的寶石級藍莓。</p></div>
+                    </div>
                 </div>
             </section>
 
@@ -103,7 +111,7 @@
             <section id="services">
                 <h2 class="text-3xl font-bold text-center text-gray-800 mb-2">專業服務</h2>
                 <p class="text-center text-gray-500 mb-12">以專業與熱忱，提供最貼心可靠的在地服務。</p>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-8">
                     <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="jinshan-insurance">
                         <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=800&auto=format&fit=crop" alt="金珊保險" class="w-full h-48 object-cover">
                         <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">金珊保險顧問</h3><p class="mt-2 text-gray-600">為您與您的家庭，量身打造最合適的保障。</p></div>
@@ -115,6 +123,14 @@
                     <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="lihong-nanny">
                         <img src="https://images.unsplash.com/photo-1516627145497-ae6968895b74?q=80&w=800&auto=format&fit=crop" alt="利紅保母" class="w-full h-48 object-cover">
                         <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">利紅保母服務</h3><p class="mt-2 text-gray-600">愛心與耐心兼具，讓家長安心的托育選擇。</p></div>
+                    </div>
+                    <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="taishunchang">
+                        <img src="https://images.unsplash.com/photo-1560518883-ce09059ee41f?q=80&w=800&auto=format&fit=crop" alt="太順昌不動產" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">太順昌不動產</h3><p class="mt-2 text-gray-600">專業、誠信，您最值得信賴的房地產夥伴。</p></div>
+                    </div>
+                    <div class="brand-card cursor-pointer bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300" data-brand="guifei-era">
+                        <img src="https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?q=80&w=800&auto=format&fit=crop" alt="桂妃時代" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-semibold text-gray-900">桂妃時代</h3><p class="mt-2 text-gray-600">由內而外的全方位健康調理美學。</p></div>
                     </div>
                 </div>
             </section>
@@ -144,14 +160,54 @@
                 <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">最新消息</h2>
                 <div class="max-w-3xl mx-auto space-y-6">
                     <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年8月1日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【桂妃時代】秋季煥膚調理課程，早鳥預約享8折優惠！</h4>
+                        <p class="text-gray-600 mt-2">告別夏日黏膩，迎接清爽秋肌！桂妃時代推出全新秋季課程，即日起預約享優惠。</p>
+                    </div>
+                     <div class="bg-white p-6 rounded-lg shadow-sm">
                         <p class="text-sm text-gray-500">2025年7月28日</p>
                         <h4 class="font-semibold text-lg text-red-800 mt-1">恭喜【利紅薑黃】通過2025年度SGS檢驗！</h4>
                         <p class="text-gray-600 mt-2">利紅薑黃持續為食安把關，提供消費者最安心的產品，歡迎舊雨新知繼續支持！</p>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月25日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【新藍海藍莓】產季即將結束，把握最後品嚐機會！</h4>
+                        <p class="text-gray-600 mt-2">今年的藍莓鮮果產季即將進入尾聲，數量有限，售完為止，敬請把握！</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月22日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【春雨水餃】攜手在地社福團體，舉辦愛心送餐活動。</h4>
+                        <p class="text-gray-600 mt-2">春雨水餃相信美味應與眾人分享，本月與社區關懷據點合作，為長者送上溫暖的水餃。</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月20日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【太順昌不動產】週末舉辦免費不動產法規講座。</h4>
+                        <p class="text-gray-600 mt-2">想了解最新的房地產政策嗎？太順昌不動產將於本週末舉辦免費講座，歡迎踴躍參加。</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月18日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【鳳形山莊】榮獲《行遍天下》雜誌專題報導！</h4>
+                        <p class="text-gray-600 mt-2">感謝知名旅遊雜誌推薦！鳳形山莊的南洋美食與絕美山景，是您不可錯過的苗栗秘境。</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
                         <p class="text-sm text-gray-500">2025年7月15日</p>
                         <h4 class="font-semibold text-lg text-red-800 mt-1">【八甲德春農園】夏季採果樂，現正開放預約！</h4>
                         <p class="text-gray-600 mt-2">炎炎夏日何處去？快來八甲德春農園體驗親子採果樂，現採現吃最新鮮！名額有限，請儘速預約。</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月12日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【金珊保險】新住民理財規劃線上講座，圓滿結束！</h4>
+                        <p class="text-gray-600 mt-2">感謝各位的熱情參與，錯過的朋友也歡迎透過Line與金珊顧問聯繫，索取講座精華筆記。</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月10日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【新住民水產】中秋烤肉海陸霸王組，預購開跑！</h4>
+                        <p class="text-gray-600 mt-2">中秋節還在煩惱要準備什麼嗎？新住民水產推出超值海陸組合，立即預購享早鳥價！</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-sm">
+                        <p class="text-sm text-gray-500">2025年7月5日</p>
+                        <h4 class="font-semibold text-lg text-red-800 mt-1">【秀珍做月子服務】2026年上半年檔期開放預約。</h4>
+                        <p class="text-gray-600 mt-2">感謝各位準媽媽的信賴，秀珍姐的檔期已排至年底，現已開放明年上半年預約，歡迎提早洽詢。</p>
                     </div>
                 </div>
             </section>
@@ -336,6 +392,68 @@
                         </div>
                     </div>`
             },
+            'xinzhumin-seafood': {
+                title: '新住民水產',
+                type: 'product',
+                content: `
+                    <img src="https://images.unsplash.com/photo-1615141982883-c46e37c25b55?q=80&w=800&auto=format&fit=crop" alt="新住民水產" class="w-full h-64 object-cover rounded-lg mb-6">
+                    <div class="space-y-6">
+                        <div>
+                            <h4 class="section-title">品牌故事</h4>
+                            <p class="text-gray-700">來自越南沿海的創辦人，將家鄉處理海鮮的專業技術帶到台灣。我們堅持嚴選優質的養殖與漁獲來源，在最新鮮的時刻，以急速冷凍技術鎖住原始的鮮甜與營養。從彈牙的白蝦到肥美的鰻魚，每一份冷凍品都代表著我們對品質的承諾，讓您在家輕鬆享受產地直送的頂級海味。</p>
+                        </div>
+                        <div>
+                            <h4 class="section-title">冷凍水產精選</h4>
+                            <div class="space-y-4">
+                                <div class="product-item" data-id="seafood-01" data-name="產地急凍白蝦" data-price="450">
+                                    <p><b>產地急凍白蝦 (600g/盒):</b> 肉質鮮甜緊實，急速冷凍鎖住最佳風味。 (NT$ 450)</p>
+                                    <div class="flex items-center gap-2 mt-2">
+                                        <input type="number" value="1" min="1" class="w-16 text-center border rounded">
+                                        <button class="add-to-cart-btn"><i class="fas fa-cart-plus mr-2"></i>加入購物車</button>
+                                    </div>
+                                </div>
+                                <div class="product-item" data-id="seafood-02" data-name="蒲燒風味鰻魚" data-price="550">
+                                    <p><b>蒲燒風味鰻魚 (片/250g):</b> 肉質細嫩，醬汁甘醇，加熱即食的美味。 (NT$ 550)</p>
+                                    <div class="flex items-center gap-2 mt-2">
+                                        <input type="number" value="1" min="1" class="w-16 text-center border rounded">
+                                        <button class="add-to-cart-btn"><i class="fas fa-cart-plus mr-2"></i>加入購物車</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`
+            },
+            'xinlanhai-blueberry': {
+                title: '新藍海藍莓',
+                type: 'product',
+                content: `
+                    <img src="https://images.unsplash.com/photo-1498557850523-2633a1d3721d?q=80&w=800&auto=format&fit=crop" alt="新藍海藍莓" class="w-full h-64 object-cover rounded-lg mb-6">
+                    <div class="space-y-6">
+                        <div>
+                            <h4 class="section-title">品牌故事</h4>
+                            <p class="text-gray-700">來自加拿大的創辦人，將家鄉栽種藍莓的熱情帶到苗栗。他與在地小農合作，引進優良品種，專注於培育出果實最飽滿、風味最濃郁的藍莓。每一顆藍莓都富含花青素與維生素，不僅美味可口，更是天然的營養補給品，為您的健康增添一抹亮麗的藍色。</p>
+                        </div>
+                        <div>
+                            <h4 class="section-title">商品列表</h4>
+                            <div class="space-y-4">
+                                <div class="product-item" data-id="blueberry-01" data-name="特選新鮮藍莓" data-price="350">
+                                    <p><b>特選新鮮藍莓 (125g/盒):</b> 當日現採，果粉完整，風味濃郁。 (NT$ 350)</p>
+                                    <div class="flex items-center gap-2 mt-2">
+                                        <input type="number" value="1" min="1" class="w-16 text-center border rounded">
+                                        <button class="add-to-cart-btn"><i class="fas fa-cart-plus mr-2"></i>加入購物車</button>
+                                    </div>
+                                </div>
+                                <div class="product-item" data-id="blueberry-02" data-name="手工藍莓果醬" data-price="280">
+                                    <p><b>手工藍莓果醬 (200g/罐):</b> 無任何添加物，吃得到完整果粒。 (NT$ 280)</p>
+                                    <div class="flex items-center gap-2 mt-2">
+                                        <input type="number" value="1" min="1" class="w-16 text-center border rounded">
+                                        <button class="add-to-cart-btn"><i class="fas fa-cart-plus mr-2"></i>加入購物車</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`
+            },
             'jinshan-insurance': {
                 title: '金珊保險顧問',
                 type: 'service',
@@ -393,7 +511,7 @@
                     <div class="space-y-6">
                         <div>
                             <h4 class="section-title">保母介紹</h4>
-                            <p class="text-gray-700">同樣來自越南的利紅，是位領有專業證照的保母。她將對自家孩子的愛，延伸到每個托育的寶寶身上。她打造了一個安全、舒適且充滿童趣的托育環境，並採用蒙特梭利教學法，啟發孩子們的無限潛能，是讓家長能安心托付的最佳選擇。</p>
+                            <p class="text-gray-700">同樣來自越南的利紅，是位領有專業證照的保母。她將對自家孩子的愛，延伸到每個托育の寶寶身上。她打造了一個安全、舒適且充滿童趣的托育環境，並採用蒙特梭利教學法，啟發孩子們的無限潛能，是讓家長能安心托付的最佳選擇。</p>
                         </div>
                         <div>
                             <h4 class="section-title">服務資訊</h4>
@@ -406,6 +524,55 @@
                         <div class="contact-buttons">
                             <button class="ai-chat-btn"><i class="fas fa-robot mr-2"></i>AI智能客服</button>
                             <a href="https://line.me/ti/p/" target="_blank" class="line-btn"><i class="fab fa-line mr-2"></i>加Line好友</a>
+                        </div>
+                    </div>`
+            },
+            'taishunchang': {
+                title: '太順昌不動產',
+                type: 'service',
+                content: `
+                    <img src="https://images.unsplash.com/photo-1560518883-ce09059ee41f?q=80&w=800&auto=format&fit=crop" alt="太順昌不動產" class="w-full h-64 object-cover rounded-lg mb-6">
+                    <div class="space-y-6">
+                        <div>
+                            <h4 class="section-title">公司介紹</h4>
+                            <p class="text-gray-700">「太順昌不動產」由擁有多年經驗的專業團隊組成，創辦人深耕苗栗地區，了解在地發展與需求。我們秉持著誠信、專業、熱忱的服務精神，致力於為客戶提供最透明的資訊與最安心的交易過程，無論是買賣、租賃，都能成為您最可靠的夥伴。</p>
+                        </div>
+                        <div>
+                            <h4 class="section-title">服務項目</h4>
+                            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                                <li><b>土地、農地、建地買賣：</b>精準媒合，活化您的資產。</li>
+                                <li><b>房屋、廠房租賃與買賣：</b>為您找到理想的家或事業起點。</li>
+                                <li><b>不動產相關稅務與法規諮詢：</b>提供專業建議，保障您的權益。</li>
+                            </ul>
+                        </div>
+                        <div class="contact-buttons">
+                            <button class="ai-chat-btn"><i class="fas fa-robot mr-2"></i>AI智能客服</button>
+                            <a href="https://line.me/ti/p/" target="_blank" class="line-btn"><i class="fab fa-line mr-2"></i>加Line好友</a>
+                        </div>
+                    </div>`
+            },
+            'guifei-era': {
+                title: '桂妃時代',
+                type: 'service',
+                content: `
+                    <img src="https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?q=80&w=800&auto=format&fit=crop" alt="桂妃時代" class="w-full h-64 object-cover rounded-lg mb-6">
+                    <div class="space-y-6">
+                        <div>
+                            <h4 class="section-title">品牌理念</h4>
+                            <p class="text-gray-700">「桂妃時代」不僅是追求外在的美麗，更重視由內而外的健康調理。創辦人桂妃將傳統的東方經絡按摩手法，與現代的美容科技、天然草本的健康食品相結合，打造一個讓身心靈都能徹底放鬆、恢復元氣的療癒空間。</p>
+                        </div>
+                        <div>
+                            <h4 class="section-title">服務項目</h4>
+                            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                                <li><b>客製化臉部護理：</b>針對不同膚質，提供深層清潔、保濕、抗老等課程。</li>
+                                <li><b>東方經絡舒壓按摩：</b>專業手法疏通氣結，緩解肌肉疲勞，促進循環。</li>
+                                <li><b>天然草本美容品：</b>販售嚴選的天然、無負擔保養品與化妝品。</li>
+                                <li><b>健康調理食品：</b>提供內服的養生茶飲、膠原蛋白等健康補給品。</li>
+                            </ul>
+                        </div>
+                        <div class="contact-buttons">
+                            <button class="ai-chat-btn"><i class="fas fa-robot mr-2"></i>AI智能客服</button>
+                            <a href="https://line.me/ti/p/" target="_blank" class="line-btn"><i class="fab fa-line mr-2"></i>加Line好友諮詢</a>
                         </div>
                     </div>`
             },
@@ -442,7 +609,7 @@
                     <div class="space-y-6">
                         <div>
                             <h4 class="section-title">山莊故事</h4>
-                            <p class="text-gray-700">來自印尼的莊主，因為思念家鄉的風景與美食，在苗栗的山林間打造了這座充滿南洋風情的「鳳形山莊」。這裡不僅有絕美的山景，更有她親手烹煮的道地印尼料理。她希望每位來訪的旅客，都能在此放下煩憂，享受一場味蕾與心靈的饗宴。</p>
+                            <p class="text-gray-700">來自印尼的莊主，因為思念家鄉の風景與美食，在苗栗的山林間打造了這座充滿南洋風情的「鳳形山莊」。這裡不僅有絕美的山景，更有她親手烹煮的道地印尼料理。她希望每位來訪的旅客，都能在此放下煩憂，享受一場味蕾與心靈的饗宴。</p>
                         </div>
                         <div>
                             <h4 class="section-title">特色推薦</h4>
@@ -651,4 +818,3 @@
     </script>
 </body>
 </html>
-" selected by the user. please make the following edit: "請把網站改為藍底, 比較
